[package]
name = "listing_6_09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
parking_lot = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}
# We can omit the version number for local imports
handle-errors = {path = "handle-errors"}
log = "0.4"
log4rs = "1.1"